--- a/style.css
+++ b/style.css
@@ -62,6 +62,14 @@
     border-radius: 1rem;
     border: none;
     cursor: pointer;
+    &:hover{
+        background-color: #000000;
+        color: #f6f7eb;
+        border: 2px solid white;
+        transform: scale(1.10);
+        box-shadow: 0 3px 4px 2px grey;
+        transition: 0.5s;
+    }
   }
   
   #msg {
